--- a/index.html
+++ b/index.html
@@ -192,7 +192,21 @@
     <section class="experienciaModal">
         <div class="experienciaModal__box">
             <div class="experienciaModal__box__col">
-                <img src="img/ex01.png" alt="ex01">
+                <div class="experienciaModal__box__col__blank"></div>
+                <div class="experienciaModal__box__col__imgbox">
+                    <div class="experienciaModal__box__col__imgbox__item active">
+                        <img src="img/ex01.png" alt="">
+                    </div>
+                    <div class="experienciaModal__box__col__imgbox__item">
+                        <img src="img/ex04.png" alt="">
+                    </div>
+                    <div class="experienciaModal__box__col__imgbox__item">
+                        <img src="img/ex02.png" alt="">
+                    </div>
+                    <div class="experienciaModal__box__col__imgbox__item">
+                        <img src="img/ex03.png" alt="">
+                    </div>
+                </div>
             </div>
             <div class="experienciaModal__box__col pt-5 pb-5 pl-5 pr-5">
                 <h2 class="experienciaModal__box__col--title mb-3">experiencia 1</h2>
