--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="experiencia__container container">
             <h2 class="experiencia__container--title mb-5">experiencia</h2>
             <div class="experiencia__container__imgbox">
-                <article class="experiencia__container__imgbox__item">
+                <!-- <article class="experiencia__container__imgbox__item">
                     <img src="img/bg01.png" alt="">
                     <h3 class="experiencia__container__imgbox__item--title">experiencia 01</h3>
                     <a href="#" class="experiencia__container__imgbox__item--link">ver más</a>
@@ -128,7 +128,7 @@
                     <img src="img/ex04.png" alt="">
                     <h3 class="experiencia__container__imgbox__item--title">experiencia 01</h3>
                     <a href="#" class="experiencia__container__imgbox__item--link">ver más</a>
-                </article>
+                </article> -->
             </div>
         </div>
     </section>
@@ -190,7 +190,7 @@
         </div>
     </footer>
     <section class="experienciaModal">
-        <div class="experienciaModal__box">
+        <!-- <div class="experienciaModal__box">
             <div class="experienciaModal__box__col">
                 <div class="experienciaModal__box__col__blank"></div>
                 <div class="experienciaModal__box__col__imgbox">
@@ -217,10 +217,12 @@
             <div class="experienciaModal__box--close">
                 <i class="fa-solid fa-xmark"></i>
             </div>
-        </div>
+        </div> -->
     </section>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/codigo.js"></script>
+    <script src="js/experiencias.js"></script>
 </body>
 </html>
