--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <div class="header__nav__top__container__social">
                         <div class="header__nav__top__container__social--title">siguenos</div>
                         <div class="header__nav__top__container__social__icons">
-                            <a href="">
+                            <a href="https://www.instagram.com/zamora.estructuras.temporales/" target="_blank">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
-                            <a href="">
+                            <a href="https://www.facebook.com/profile.php?id=100082510328823" target="_blank">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
                         </div>
@@ -35,10 +35,10 @@
                         <img src="img/logo1.png" alt="Zamora">
                     </div> -->
                     <div class="header__nav__top__container__contacto">
-                        <a href="">
+                        <a href="https://wa.me/+51997130028" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a>
-                        <a href="">
+                        <a href="mailto:contacto@zamoraestructuras.pe">
                             <i class="fa-regular fa-envelope"></i>
                         </a>
                     </div>
@@ -76,7 +76,7 @@
             <aside class="nosotros__container__box">
                 <h2 class="nosotros__container__box--title">¿Quiénes somos?</h2>
                 <hr class="nosotros__container__box--line mt-3 mb-3">
-                <p class="nosotros__container__box--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quas totam, soluta odio vero hic, quia aut pariatur sed eum laboriosam delectus doloribus, inventore commodi! Labore unde quidem minima natus aut totam, aperiam culpa minus possimus similique deserunt enim vel blanditiis animi obcaecati vitae fugit perferendis iusto voluptatum. Laudantium, excepturi placeat. Quia hic, a nesciunt consectetur sint officiis ad saepe!</p>
+                <p class="nosotros__container__box--text">Somos un equipo profesional,comprometido con la excelencia de la calidad y servicio. Buscamos diseñar y complementar todos los proyectos de nuestros clientes con soluciones estructurales innovadoras,seguras y certificadas.</p>
             </aside>
         </div>
     </section>
@@ -88,9 +88,10 @@
                 </h2>
                 <ul class="staff__container__box__ul">
                     <li class="staff__container__box__ul--item">El mejor staff profesional de arquitectos, ingenieros y montajistas a nivel nacional.</li>
-                    <li class="staff__container__box__ul--item">El mejor staff profesional de arquitectos, ingenieros y montajistas a nivel nacional.</li>
-                    <li class="staff__container__box__ul--item">El mejor staff profesional de arquitectos, ingenieros y montajistas a nivel nacional.</li>
-                    <li class="staff__container__box__ul--item">El mejor staff profesional de arquitectos, ingenieros y montajistas a nivel nacional.</li>
+                    <li class="staff__container__box__ul--item">La mejor infraestructura en el Perú para tu proyecto.</li>
+                    <li class="staff__container__box__ul--item">El más destacado servicio personalizado.</li>
+                    <li class="staff__container__box__ul--item">Estructura normada y certificada.</li>
+                    <li class="staff__container__box__ul--item">Servicio de Riggingcon motores americanos.</li>
                 </ul>
             </aside>
         </div>
@@ -176,15 +177,15 @@
         <div class="footer__container container">
             <div class="footer__container__col">
                 <h2 class="footer__container__col--title">Acerca de nosotros</h2>
-                <p class="footer__container__col--descri">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis quaerat a, officia ut libero neque, cupiditate eos sapiente doloremque impedit eum? Ipsa incidunt sit temporibus officiis obcaecati sequi deleniti voluptate dicta perferendis labore nisi sunt ea dolorem, nulla non ab fugit est provident molestias nostrum! Qui quo laboriosam aperiam asperiores.</p>
+                <p class="footer__container__col--descri">Brindar el mejor servicio y atención profesional, con la mejor calidad y acabado estructural para todo proyecto. En línea con la entrega oportuna en los plazos establecidos por nuestros clientes</p>
             </div>
             <div class="footer__container__col">
                 <h2 class="footer__container__col--title">Contacto</h2>
                 <div class="footer__container__col__box">
                     <h3 class="footer__container__col__box--title mb-1">Celular</h3>
-                    <p class="footer__container__col__box--data mb-3">912345678</p>
+                    <p class="footer__container__col__box--data mb-3">997 130 028</p>
                     <h3 class="footer__container__col__box--title mb-1">email</h3>
-                    <a href="mailto: name@tucorreo.com" class="footer__container__col__box--data">name@tucorreo.com</a>
+                    <a href="mailto:contacto@zamoraestructuras.pe" class="footer__container__col__box--data">contacto@zamoraestructuras.pe</a>
                 </div>
             </div>
         </div>
